--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>gloriousCode</title>
+    <title>Glorious Edge</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -18,22 +18,26 @@
       <div id="profile_img" style="background: url(https://avatars1.githubusercontent.com/u/9261323?v=4) center;"></div>
       <div id="username"><span style="display:block;">Scott</span><a href="https://github.com/gloriousCode">@gloriousCode</a></div>
       <div id="userbio" style="display: block;">Senior Software Engineer at Thrasher Corp.</div>
+	  <div class="socials" style="display: block;">I enjoy software, drawing and fitness</div>
       <div id="about">
-                <span style="display:block;"><i class="fas fa-users"></i> &nbsp; Thrasher Corp.</span>
+	                  <span style="display:block;"><i class="fas fa-envelope"></i> &nbsp;&nbsp; <a href="mailto:scott@gloriousedge.com?subject=Hello from your site">Contact me</a></span>
+					   <span style="display:block;"><i class="fab fa-linkedin-in"></i> &nbsp;&nbsp; <a href="https://www.linkedin.com/in/scott-grant-linkedin/" target="_blank" class="socials">LinkedIn </a></span>
+                <span style="display:block;"><i class="fas fa-users"></i> &nbsp; <a href="https://github.com/thrasher-corp" target="_blank">Thrasher Corp. Github</a></span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
-                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="www.gloriousedge.com">www.gloriousedge.com</a></span>
+				                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.thrasher.io" target="_blank">www.thrasher.io</a></span>
                 <span style="display:none;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; null</span>
                 <span style="display:none;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>
                 <div class="socials">
                 <span style="display:none !important;"><a href="https://www.twitter.com/undefined" target="_blank" class="socials"><i class="fab fa-twitter"></i></a></span>
                 <span style="display:none !important;"><a href="https://www.dribbble.com/undefined" target="_blank" class="socials"><i class="fab fa-dribbble"></i></a></span>
-                <span style="display:block;"><a href="https://www.linkedin.com/in/scott-grant-linkedin/" target="_blank" class="socials"><i class="fab fa-linkedin-in"></i></a></span>
+               
                 <span style="display:none !important;"><a href="https://www.medium.com/@undefined/" target="_blank" class="socials"><i class="fab fa-medium-m"></i></a></span>
                 </div>
                 </div>
     </div>
     <div id="display">
       <div id="work">
+
         <h1>Work.</h1>
         <div class="projects" id="work_section">
                         <a href="https://github.com/thrasher-corp/gocryptotrader" target="_blank">
