--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	  <div class="socials" style="display: block;">I enjoy software, drawing and fitness</div>
       <div id="about">
 	                  <span style="display:block;"><i class="fas fa-envelope"></i> &nbsp;&nbsp; <a href="mailto:scott@gloriousedge.com?subject=Hello from your site">Contact me</a></span>
-					   <span style="display:block;"><i class="fab fa-linkedin-in"></i> &nbsp;&nbsp; <a href="https://www.linkedin.com/in/scott-grant-linkedin/" target="_blank" class="socials">LinkedIn </a></span>
+					   <span style="display:block;"><i class="fab fa-linkedin-in"></i> &nbsp;&nbsp; <a href="https://www.linkedin.com/in/scott-grant-linkedin/" target="_blank" >LinkedIn </a></span>
                 <span style="display:block;"><i class="fas fa-users"></i> &nbsp; <a href="https://github.com/thrasher-corp" target="_blank">Thrasher Corp. Github</a></span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
 				                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://www.thrasher.io" target="_blank">www.thrasher.io</a></span>
